--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,23 +4,12 @@
         {
             "type": "shell",
             "label": "gcc.exe build active file",
-            "command": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\gcc.exe",
-            "args": [
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+            "command": "make",
+          
+          
+            "problemMatcher": [
+                "$gcc"
             ],
-            "options": {
-                "cwd": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin"
-            },
-//            "problemMatcher": [
-//                "$gcc"
-//            ],
-            "problemMatcher":{
-                "base": "$gcc",
-                "fileLocation":"autoDetect"
-            },
             "group": {
                 "kind": "build",
                 "isDefault": true
